fix align center css main container

--- a/src/components/main/Main.module.sass
+++ b/src/components/main/Main.module.sass
@@ -282,6 +282,7 @@
         margin-top: 60px
     .containerMainText
         width: 90%
+        margin: 0
     .containerPortfolio
         padding: 0
         a
@@ -301,6 +302,7 @@
         margin-top: 140px
     .containerLinkSocial
         width: auto
+        height: 100%
     .containerSocial
         white-space: nowrap
         justify-content: space-between
